--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
     }
   </script>
   <body>
-    <input type="button" value="오점뭐?" onclick="GoLunchVote()" />
+    <input type="button" value="투표?" onclick="GoLunchVote()" />
     <input type="button" value="메뉴" onclick="GoMenu()" />
   </body>
 </html>
