투표결과 띄우기 전까지

--- a/main.html
+++ b/main.html
@@ -24,7 +24,11 @@
     }
   </script>
   <body>
-    <input type="button" value="투표?" onclick="GoLunchVote()" />
-    <input type="button" value="메뉴" onclick="GoMenu()" />
+    <form action="/vote" method="GET">
+      <input type="submit" value="투표" />
+    </form>
+    <form action="/vote" method="GET">
+      <input type="submit" value="메뉴" />
+    </form>
   </body>
 </html>
